resume2.css
/* REWRITE BOOTSTRAP SETTING*/
@media (min-width: 1400px) {
  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl,
  .container-xxl {
    max-width: 1040px;
  }
}
.container {
  padding-top: 80px;
  padding-bottom: 80px;
}

/* end */

@font-face {
  font-family: "neue_montrealbold";
  src: url("fonts/neuemontreal-bold-webfont.woff2") format("woff2"),
    url("fonts/neuemontreal-bold-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "neue_montrealregular";
  src: url("fonts/neuemontreal-regular-webfont.woff2") format("woff2"),
    url("fonts/neuemontreal-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "neue_montrealmedium";
  src: url("fonts/neuemontreal-medium-webfont.woff2") format("woff2"),
    url("fonts/neuemontreal-medium-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

:root {
  --dark: black;
  --light: whitesmoke;
  --rose: #ffdbe5;
  --lemon: #fcee42;
  --bear: #a05b3f;
  --theme: #fcfbf6;
  --themeDarkest: #1b4638;
  --lightTheme: #fcfae7;
  --peach: #ffc6a2;
  --darkPeach: #f7906e;
  --textHeader: whitesmoke;
}

::selection {
  background-color: var(--theme);
}
::-webkit-scrollbar {
  width: 20px;
}
::-webkit-scrollbar-thumb {
  background-color: var(--peach);
  border-radius: 10px;
}
::-webkit-scrollbar-track {
  background-color: var(--lightTheme);
}
html,
body {
  width: 100%;
  overflow-x: hidden;
}

body {
  background-color: #fcfae7;
  overflow-x: hidden;
}
* {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: "neue_montrealregular", aileron, sans-serif;
  font-weight: 400;
  font-style: normal;
}

.title {
  height: 100vh;
  width: 100%;
  max-width: 100%;
  background-color: var(--theme);
  color: var(--light);
  padding: 0;
}
header{
  background-image: url('pattern.jpg');
  background-position: center;
  background-size: contain;
}
.top-cap-wrapper{
  background: #fcfbf6;
  width: 50rem;
  margin: auto;
}
.top-cap {
  margin: 0;
  padding: 0;
  font-size: 6rem;
  margin-top: 30px;
  color: var(--themeDarkest);
  align-items: center;
}
.top-cap-dsp {
  font-size: 2rem;
  color: var(--themeDarkest);
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 3px;
}

.bm {
  height: 50rem;
  margin-top: -12.8rem;
}
.navbar-brand {
  margin-left: 3rem;
  color: var(--lightTheme) !important;
}
.navbar {
  background: var(--themeDarkest);
}
.nav-item > a {
  color: var(--lightTheme) !important;
}
.nav-item > a:hover {
  color: var(--lemon) !important;
}
.navbar-toggler-icon {
  background: url("image/burger.png");
  background-size: 120%;
  background-position: center;
}
/* --------------------------- */
.short-cap {
  font-size: 3.5rem;
  color: var(--dark);
}

#about-me {
  margin-top: 3rem;
  margin: auto !important;
  font-size: 50px;
}

.line {
  background-color: var(--dark);
  width: 23rem;
  height: 0.5rem;
}
.line-three {
  background-color: var(--dark);
  width: 17rem;
  height: 0.5rem;
}
.short-intro {
  font-size: 1rem;
  text-align: justify;
  margin-top: 2rem;
}
.intro-cap {
  font-size: 3rem;
}

.intro-cap-desp {
  text-align: justify;
}
.intro-box {
  width: 60%;
}
.self-wrapper {
  display: flex;
}
.sec-one-text-box {
  display: inline-block;
  line-height: 1.5rem;
  width: 50%;
}
#my-img {
  height: auto;
  width: auto;
  width: 70%;
  border: 0.5rem solid var(--peach);
  border-radius: 50%;
  margin-right: 100px;
}
#my-img::before {
  content: "";
  height: 100%;
  width: 100%;
}

.mid-sec-one {
  width: 100vw;
  height: 100%;
  background-color: var(--rose);
  /* padding: 10vh 15vw 10vh 15vw; */
}
.intro-box {
  background-color: var(--rose);
  width: 100%;
  margin: 3rem auto 0 auto;
}
.short-cap-box2 {
  padding-top: 3rem;
  padding-left: 2rem;
  text-align: left;
}

/* section two---------------------------------------- */
.mid-sec-two {
  background-color: var(--theme);
  /* padding: 10vh 15vw 10vh 15vw; */
}
.mid-sec-two-row {
  /*not used*/
  --bs-gutter-x: 0;
  margin-top: 2rem;
  display: flex;
  justify-content: space-between;
}
.card {
  /* width: 15rem; */
  font-size: 1.5rem;
  text-align: center;
  background-color: var(--light);
  cursor: pointer;
  height: 520px;
}
.card-icon {
  padding-top: 20px;
}
#lips {
  margin-bottom: 2px;
  padding-top: 45px;
}

.card-header {
  background-color: var(--rose);
  text-transform: uppercase;
  font-size: 1.7rem;
  text-align: center;
  height: 13rem;
  font-weight: bold;
}

.card01-header,
.card02-header,
.card03-header,
.card04-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.card:hover .card-cap {
  border-bottom: 5px solid var(--peach);
}
.card .list-group {
  padding: 10px;
}
.list-group-item {
  border: 1px solid transparent !important;
  background-color: var(--light);
}

.card-cap {
  font-weight: bold;
  padding: 15px;
}
#card-cap-others {
  padding: 10px;
}

/* third section------------------------- */
.mid-sec-three {
  /* height: 100vh; */
  /* width: 100vw; */
  background-color: var(--rose);
  /* padding: 10vh 15vw 10vh 15vw; */
}

/* timeline------------------------------- */
#exps {
  color: var(--dark);
}
.timeline-title {
  background: #f7906e;
}
.timeline-wrapper {
  min-height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 100px 0;
  color: white;
}
.timeline {
  /*
  //////////////////////////not used
  width: 80%;
  height: auto;
  max-width: 800px;
  margin: 0 auto;
  position: relative;
  */
}

.timeline ul {
  list-style: none;
  overflow: auto;
  padding-left: 0;
  padding:10px 0;
}
.timeline ul li {
  /* padding: 20px;
  border-radius: 10px;
  margin-bottom: 20px;
  background: #f7906e; */
  margin-bottom:15px;
}
.timeline-content{
  padding: 20px;
  border-radius: 10px;
  /* margin-bottom: 20px; */
  background: #f7906e;
}

.timeline ul li:last-child {
  margin-bottom: 0;
}
.timeline-content h2 {
  font-size: 2rem;
  font-weight: 600;
  line-height: 40px;
  margin-bottom: 10px;
}
.timeline-content p {
  font-size: 1.3rem;
  line-height: 30px;
  font-weight: 300;
}

/* mid-sec-four */
.mid-sec-four {
  height: 40vh;
  width: 100vw;
  /* padding: 15vh 15vw 10vh 15vw; */
  background-image: url("https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80");
  /* background-image: url("image/texture-one.jpg"); */
  background-attachment: fixed;
  background-size: 100%;
  display: flex;
  align-items: center;
}

.mid-sec-four-row {
  margin-top: -4rem;
  margin-left: auto;
  margin-right: auto;
  height: 20vh;
  width: 50vw;
  color: var(--light);
  /*  backdrop-filter: blur(10px); */
  text-shadow: -1px 1px darkgrey;
}
.dwn-btn {
  width: 15rem;
  height: 3rem;
  border-radius: 30px;
  background-color: var(--themeDarkest);
  border: none;
  text-transform: uppercase;
}
.dwn-btn:hover {
  transform: scale(1.02);
  background: var(--lemon);
}
.dwn-btn:hover a {
  color: var(--themeDarkest);
}
.resume-link {
  text-decoration: none;
  color: var(--light);
}
/* section five--projects------------------ */

.mid-sec-five {
  padding-left: 100px;
  padding-right: 100px;
  background-color: var(--themeDarker);
}
.line-five {
  width: 24rem;
}
.mid-sec-five-row {
  background-color: var(--themeDarker);
}

.link-icon {
  position: absolute;
  left: 50%;
  top: 45%;
  color: var(--light);
  opacity: 0;
}
.por-link {
  color: var(--light);
}
.image-section {
  position: relative;
}
#portfolio .overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: var(--themeDarkest);
  opacity: 0;
}
#portfolio .image-section:hover .overlay {
  opacity: 0.6;
  transition: all 0.5s ease-in;
}
.image-section:hover .link-icon {
  opacity: 1;
  transition: all 0.5s ease-in;
}
.card-text {
  position: absolute;
  left: 10%;
  top: 30%;
  color: var(--light);
  opacity: 0;
}
.image-section:hover .card-text {
  position: absolute;
  opacity: 1;
}
.row-1 {
  padding-top: 3rem;
}
.square {
  position: relative;
  background-image: url("https://picsum.photos/400/400/?random=1");
  background-size: cover;
  /* height: 240px;
  width: 400px; */
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
}

.square:hover {
  background-color: var(--rose);
  background-blend-mode: soft-light;
}
.s1 {
  background-image: url("image/calendar_2.png");
}
.s2{
  background-image:  url("image/pomodoro.png");
}
.s3{
  background-image: url('image/invoice.PNG');
}
.s4{
  background-image: url('image/bestsellers.png');
}
.s5{
  background-image: url('image/analog_clock.png');
}
.s6{
  background-image: url('image/ice_cream_game.PNG');
}
.square:hover .text-box {
  display: block;
}

.text-box {
  animation: slideInLeft;
  animation-duration: 1s;
  position: absolute;
  height: 100%;
  width: 100%;
  display: none;
  z-index: 25;
  padding: 30px;
  line-height: 2;
  backdrop-filter: blur(10px);
  text-align: left;
}
.hashtag {
  width:100%;
  height: 2rem;
  background-color: greenyellow;
  border-radius: 20px;
  display: block;
  text-align: center;
  margin-bottom: 1rem;
  margin-right: 5px;
}
.port-ul li {
  list-style: circle;
}
.port-heading {
  font-weight: bold;
}

.go-icon {
  border: 3px solid var(--dark);
  border-radius: 50%;
  height: 50px;
  width: 50px;
  text-align: center;
  margin-left: 70%;
}
.go-arrow {
  transform: translate(0, 20%);
}
.go-icon:hover .go-arrow {
  transform: translate(15%, 20%);
  transition: transform 0.3s linear;
}
.go-link {
  color: var(--dark);
}
.go-link:hover {
  color: var(--dark);
}

.pro-short-cap {
  padding-top: 100px;
}
.pro-block {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
}
/* footer----------------------------------------------- */
footer {
  height: 40vh;
  width: 100vw;
  background-color: var(--themeDarkest);
}
.icon-box {
  text-align: center;
}
.icon-wrapper {
  height: 4rem;
  width: 4rem;
  border-radius: 50%;
  background-color: var(--theme);
  display: inline-block;
  margin-top: 15vh;
  margin-right: 1rem;
}
.fa-envelope,
.fa-github,
.fa-linkedin {
  color: var(--dark);
  text-align: center;
  transform: translate(0, 50%);
}

